--- a/Flock/BackEventView.xib
+++ b/Flock/BackEventView.xib
@@ -8,6 +8,11 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="OpenSans-Semibold.ttf">
+            <string>OpenSans-Semibold</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -15,18 +20,32 @@
             <rect key="frame" x="0.0" y="0.0" width="250" height="250"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lUX-Fe-hJw">
+                <imageView userInteractionEnabled="NO" alpha="0.5" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lUX-Fe-hJw">
                     <rect key="frame" x="0.0" y="0.0" width="250" height="250"/>
                 </imageView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Be there." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="laK-8q-CSH">
+                    <rect key="frame" x="16" y="111" width="218" height="28"/>
+                    <fontDescription key="fontDescription" name="OpenSans-Semibold" family="Open Sans" pointSize="20"/>
+                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
+                <constraint firstAttribute="trailing" secondItem="laK-8q-CSH" secondAttribute="trailing" constant="16" id="GgO-Xf-iSS"/>
                 <constraint firstItem="lUX-Fe-hJw" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="R7L-tp-JXF"/>
+                <constraint firstItem="laK-8q-CSH" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="RmU-Z4-4S7"/>
                 <constraint firstItem="lUX-Fe-hJw" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="cSY-2m-ydG"/>
+                <constraint firstItem="laK-8q-CSH" firstAttribute="centerY" secondItem="lUX-Fe-hJw" secondAttribute="centerY" id="iGf-15-kaa"/>
                 <constraint firstAttribute="trailing" secondItem="lUX-Fe-hJw" secondAttribute="trailing" id="l6A-sc-vhi"/>
                 <constraint firstAttribute="bottom" secondItem="lUX-Fe-hJw" secondAttribute="bottom" id="utm-25-CEE"/>
+                <constraint firstItem="laK-8q-CSH" firstAttribute="centerX" secondItem="lUX-Fe-hJw" secondAttribute="centerX" id="wQ8-Wq-gVi"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <connections>
+                <outlet property="backgroundImage" destination="lUX-Fe-hJw" id="1lH-DS-JJh"/>
+                <outlet property="textLabel" destination="laK-8q-CSH" id="qoF-0m-uaA"/>
+            </connections>
         </view>
     </objects>
 </document>
